--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
+h1 {color:royalblue}
 body {
     text-align:center;
     background-color: gold;}
 
-li {color:whitesmoke;
-    font-weight: bold;
+li {font-weight: bold;
     text-align:center;
     font-size:15px;
     background-color: royalblue;
     padding:10px;}
-ul {list-style:none}
+ul {list-style:none;}
 li:hover {background-color: lightblue;}
-a {color:whitesmoke}
+a {color:gold}
