--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -15,7 +15,7 @@ p {
 /** onderstaande styling mag gerust verwijderd worden **/
 
 .menu a:visited {
-  color: honeydew;
+  color: goldenrod;
   background-color: inherit;
 }
 
