--- a/eindproject-website/style.css
+++ b/eindproject-website/style.css
@@ -1,1 +1,24 @@
-img {width: 300px;}
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: 'Poppins' , sans-serif;
+}
+img {
+    font-size: 30px;
+    letter-spacing: 4px;
+    padding: 15px;
+    background-color: #000;
+    width: 100%;
+}
+.main {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    text-align: center;
+}
+.menu {
+    width: 20%;
+    background-color: #121227;
+}
