--- a/eindproject-website/style.css
+++ b/eindproject-website/style.css
@@ -5,20 +5,23 @@
     list-style: none;
     font-family: 'Poppins' , sans-serif;
 }
-img {
-    font-size: 30px;
-    letter-spacing: 4px;
-    padding: 15px;
-    background-color: #000;
-    width: 100%;
-}
+
 .main {
     width: 100%;
     height: 100vh;
-    display: flex;
-    text-align: center;
+    background: #000;
 }
+
 .menu {
-    width: 20%;
-    background-color: #121227;
+    width: 17%;
+    height: 100%;
+    background: red;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 20px;
+}
+
+img {
+    width: 100%;
 }
