--- a/eindproject-website/style.css
+++ b/eindproject-website/style.css
@@ -88,70 +88,93 @@ details[open] > summary {
   margin-bottom: 0.5rem;
 }
 
-.crossfade {opacity:0.5;}
-.crossfade > figure {
-  animation: imageAnimation 30s linear infinite 0s;
-  backface-visibility: hidden;
-  background-size: cover;
-  background-position: center center;
-  color: transparent;
-  height: 100%;
-  left: 0px;
-  opacity: 0;
+
+
+#backgroundImage1,
+#backgroundImage2,
+.ovarlay,
+.infoText {
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
   position: absolute;
-  top: 0px;
-  width: 100%;
-  z-index: 0;
-}
-.crossfade > figure:nth-child(1) { background-image: url('animalbox.jpg'); }
-.crossfade > figure:nth-child(2) {
-  animation-delay: 6s;
-  background-image: url('crayondrawing.jpeg');
-}
-.crossfade > figure:nth-child(3) {
-  animation-delay: 12s;
-  background-image: url('greypainter.jpeg');
-}
-.crossfade > figure:nth-child(4) {
-  animation-delay: 18s;
-  background-image: url('machine.jpg');
-}
-.crossfade > figure:nth-child(5) {
-  animation-delay: 24s;
-  background-image: url('metalbuild.jpg');
-}
-.crossfade > figure:nth-child(6) {
-  animation-delay: 30s;
-  background-image: url('moretags.jpg');
-}
-@keyframes 
-imageAnimation {  0% {
- animation-timing-function: ease-in;
- opacity: 0;
-}
- 8% {
- animation-timing-function: ease-out;
- opacity: 1;
-}
- 17% {
- opacity: 1
-}
- 25% {
- opacity: 0
-}
- 100% {
- opacity: 0
-}
 }
 
-.button {
-  border: none;
-  color: white;
-  padding: 15px 32px;
+backgroundImage,
+#backgroundImage1,
+#backgroundImage2 {
+  background-color: #555;
+  background-image: url('https://unsplash.it/1200/750/?random&0');
+  background-position: center center;
+  background-size: cover;
+}
+
+.ovarlay {
+  background: rgba(0, 0, 0, .6);
+  z-index: 5;
+}
+
+.infoText {
+  font-size: 80px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+  top: 40%;
+  background: none;
+  letter-spacing: 10px;
+  z-index: 6;
+  padding: 10px;
+}
+
+.infoText span {
+  font-size: 14px;
+  letter-spacing: 40px;
+  display: block;
+}
+
+.hide {
+  opacity: 0;
+  -webkit-transition: all 3s 3s ease-in-out;
+  -moz-transition: all 3s 3s ease-in-out;
+  -ms-transition: all 3s 3s ease-in-out;
+  -o-transition: all 3s 3s ease-in-out;
+  transition: all 3s 3s ease-in-out;
+  z-index: 2;
+}
+
+.show {
+  opacity: 1;
+  -webkit-transition: all 3s 3s ease-in-out;
+  -moz-transition: all 3s 3s ease-in-out;
+  -ms-transition: all 3s 3s ease-in-out;
+  -o-transition: all 3s 3s ease-in-out;
+  transition: all 3s 3s ease-in-out;
+  z-index: 3;
+}
+
+
+@keyframes slidein {
+  from {}
+  to {}
+}
+
+@media screen and (max-width: 768px) {
+  .infoText {
+    font-size: 40px;
+    letter-spacing: 5px;
+  }
+  .infoText span {
+    letter-spacing: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .infoText {
+    font-size: 20px;
+    letter-spacing: 1px;
+  }
+  .infoText span {
+    font-size: 10px;
+    letter-spacing: 10px;
+  }
 }
