--- a/eindproject-website/style.css
+++ b/eindproject-website/style.css
@@ -10,6 +10,7 @@
   left: 0;
   padding: 20px;
   border-right-style:solid;
+  border-radius: 25px;
 }
 
 #logoJP {
@@ -17,6 +18,10 @@
 }
 #logo {
   width: 200px;
+}
+#map {
+  height:250px;
+  width:250px
 }
 
 summary:hover {background-color: darkcyan;}
@@ -32,24 +37,15 @@ li {
   background-color: aliceblue;
   border-style: solid;
   margin:5px;
-  
+  border-radius: 25px;
   text-align: center;
   padding: 5px;
 }
 
-
-
 ul {padding:5px}
 
-.TKI {
-  width:20%;
-}
-.SP {
-  width:25%  
-}
-
 footer {
-  border-top-style: solid;
+ 
   padding:20px;
   text-align: center;
 }
@@ -82,6 +78,7 @@ details {
   border: 1px solid gray;
   border-radius: 0.2rem;
   padding: 0.5rem;
+  border-radius: 25px;
 }
 
 details[open] > summary {
@@ -89,92 +86,260 @@ details[open] > summary {
 }
 
 
+/* main css */
 
-#backgroundImage1,
-#backgroundImage2,
-.ovarlay,
-.infoText {
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+.slideshow {
   position: absolute;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
-
-backgroundImage,
-#backgroundImage1,
-#backgroundImage2 {
-  background-color: #555;
-  background-image: url('https://unsplash.it/1200/750/?random&0');
-  background-position: center center;
+.slideshow-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: no-repeat 50% 50%;
   background-size: cover;
-}
-
-.ovarlay {
-  background: rgba(0, 0, 0, .6);
-  z-index: 5;
-}
-
-.infoText {
-  font-size: 80px;
-  text-align: center;
-  top: 40%;
-  background: none;
-  letter-spacing: 10px;
-  z-index: 6;
-  padding: 10px;
-}
-
-.infoText span {
-  font-size: 14px;
-  letter-spacing: 40px;
-  display: block;
-}
-
-.hide {
-  opacity: 0;
-  -webkit-transition: all 3s 3s ease-in-out;
-  -moz-transition: all 3s 3s ease-in-out;
-  -ms-transition: all 3s 3s ease-in-out;
-  -o-transition: all 3s 3s ease-in-out;
-  transition: all 3s 3s ease-in-out;
-  z-index: 2;
-}
-
-.show {
+  -webkit-animation-name: kenburns;
+  animation-name: kenburns;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-duration: 16s;
+  animation-duration: 16s;
   opacity: 1;
-  -webkit-transition: all 3s 3s ease-in-out;
-  -moz-transition: all 3s 3s ease-in-out;
-  -ms-transition: all 3s 3s ease-in-out;
-  -o-transition: all 3s 3s ease-in-out;
-  transition: all 3s 3s ease-in-out;
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.slideshow-image:nth-child(1) {
+  -webkit-animation-name: kenburns-1;
+  animation-name: kenburns-1;
   z-index: 3;
 }
 
-
-@keyframes slidein {
-  from {}
-  to {}
+.slideshow-image:nth-child(2) {
+  -webkit-animation-name: kenburns-2;
+  animation-name: kenburns-2;
+  z-index: 2;
 }
 
-@media screen and (max-width: 768px) {
-  .infoText {
-    font-size: 40px;
-    letter-spacing: 5px;
-  }
-  .infoText span {
-    letter-spacing: 20px;
-  }
+.slideshow-image:nth-child(3) {
+  -webkit-animation-name: kenburns-3;
+  animation-name: kenburns-3;
+  z-index: 1;
 }
 
-@media screen and (max-width: 400px) {
-  .infoText {
-    font-size: 20px;
-    letter-spacing: 1px;
-  }
-  .infoText span {
-    font-size: 10px;
-    letter-spacing: 10px;
-  }
+.slideshow-image:nth-child(4) {
+  -webkit-animation-name: kenburns-4;
+  animation-name: kenburns-4;
+  z-index: 0;
+}
+ @-webkit-keyframes 
+kenburns-1 {  0% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 1.5625% {
+ opacity: 1;
+}
+ 23.4375% {
+ opacity: 1;
+}
+ 26.5625% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 98.4375% {
+ opacity: 0;
+ -webkit-transform: scale(1.21176);
+ transform: scale(1.21176);
+}
+ 100% {
+ opacity: 1;
+}
+}
+ @keyframes 
+kenburns-1 {  0% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 1.5625% {
+ opacity: 1;
+}
+ 23.4375% {
+ opacity: 1;
+}
+ 26.5625% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 98.4375% {
+ opacity: 0;
+ -webkit-transform: scale(1.21176);
+ transform: scale(1.21176);
+}
+ 100% {
+ opacity: 1;
+}
+}
+@-webkit-keyframes 
+kenburns-2 {  23.4375% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 26.5625% {
+ opacity: 1;
+}
+ 48.4375% {
+ opacity: 1;
+}
+ 51.5625% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+}
+@keyframes 
+kenburns-2 {  23.4375% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 26.5625% {
+ opacity: 1;
+}
+ 48.4375% {
+ opacity: 1;
+}
+ 51.5625% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+}
+@-webkit-keyframes 
+kenburns-3 {  48.4375% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 51.5625% {
+ opacity: 1;
+}
+ 73.4375% {
+ opacity: 1;
+}
+ 76.5625% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+}
+@keyframes 
+kenburns-3 {  48.4375% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 51.5625% {
+ opacity: 1;
+}
+ 73.4375% {
+ opacity: 1;
+}
+ 76.5625% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+}
+@-webkit-keyframes 
+kenburns-4 {  73.4375% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 76.5625% {
+ opacity: 1;
+}
+ 98.4375% {
+ opacity: 1;
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+}
+@keyframes 
+kenburns-4 {  73.4375% {
+ opacity: 1;
+ -webkit-transform: scale(1.2);
+ transform: scale(1.2);
+}
+ 76.5625% {
+ opacity: 1;
+}
+ 98.4375% {
+ opacity: 1;
+}
+ 100% {
+ opacity: 0;
+ -webkit-transform: scale(1);
+ transform: scale(1);
+}
+}
+
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0);
+  z-index: 99;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  background-color: rgba(255, 255, 255, 0.75);
+  box-shadow: 0 1em 2em -1em rgba(0, 0, 0, 0.5);
+  border-radius: 25px;
+  line-height: 1.5;
 }
