--- a/eindproject-website/style.css
+++ b/eindproject-website/style.css
@@ -2,7 +2,7 @@
   margin: 0px;
   box-sizing: border-box;
   list-style: none;
-  font-family: 'Poppins' , sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 
@@ -337,7 +337,6 @@ h1 {
   text-align: center;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  text-transform: uppercase;
   background-color: rgba(255, 255, 255, 0.75);
   box-shadow: 0 1em 2em -1em rgba(0, 0, 0, 0.5);
   border-radius: 25px;
